# pretix-stretchgoals

./: AUTHORS  Dockerfile  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.py
pretix_avgchart/: __init__.py  forms.py  signals.py  urls.py  views.py
pretix_avgchart/locale/de/LC_MESSAGES/: django.po
pretix_avgchart/static/pretixplugins/avgchart/: avgchart.js
pretix_avgchart/templates/pretixplugins/avgchart/: chart.html  public.html  settings.html
pretix_stretchgoals/: __init__.py  apps.py  chart.py  forms.py  json.py  signals.py  urls.py  utils.py  views.py
pretix_stretchgoals/locale/de/LC_MESSAGES/: django.po
pretix_stretchgoals/locale/de_Informal/LC_MESSAGES/: django.po
pretix_stretchgoals/templates/pretixplugins/stretchgoals/: chart.html  control.html  public.html  settings.html
