[project]
name = "pretix-stretchgoals"
dynamic = ["version"]
description = "Chart the average price of tickets sold over time, and optionally display them publicly."
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["pretix"]
authors = [
    {name = "pretix team", email = "support@pretix.eu"},
]
maintainers = [
    {name = "pretix team", email = "support@pretix.eu"},
]

dependencies = [

]

[project.entry-points."pretix.plugin"]
pretix_stretchgoals = "pretix_stretchgoals:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/rixx/pretix-stretchgoals"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_stretchgoals.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
